--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Sphinx documentatiohttp://127.0.0.1:5000n
 docs/_build/
 
 # PyBuilder
